# crosscoders

./: .gitignore  README.md  env.yml  pyproject.toml  requirements.txt
src/crosscoders/: __init__.py  constants.py  utils.py
src/crosscoders/abc/: __init__.py  dataclass.py  loss.py  model.py  runner.py
src/crosscoders/autoencoders/: __init__.py
src/crosscoders/autoencoders/acausal/: __init__.py  loss.py  model.py  runner.py
src/crosscoders/configs/: __init__.py  globals.py  loss.py  model.py  optimizer.py  runner.py  utils.py
src/crosscoders/data/: dataset.py  preprocessing.py
src/crosscoders/dataclasses/: __init__.py
src/crosscoders/dataclasses/configs/: __init__.py  globals.py  model.py  optimizer.py  runner.py
src/crosscoders/dataclasses/metrics/: loss.py
src/scripts/: data.py  main.py  train.py
src/scripts/configs/: data.yml  train.yml
src/scripts/experiments/: train.yml
